# COMP2432_Group_Assignment

./: .clang-format  CMakeLists.txt  CMakeSettings.json
.github/workflows/: build.yml
include/: context.h  main.h  master.h  worker.h
include/data/: date.h  order.h  period.h
include/parser/: input.lex.h  input.parse.h
include/queue/: command.h
include/scheduler/: common.h  fcfs.h  priority.h  sjf.h
src/: context.c  main.c  master.c  worker.c
src/parser/: allocator.c  input.l  input.y
src/period/: period.c
src/scheduler/: fcfs.c  internal.c  priority.c  sjf.c
